SPKPRODUKT-9169: Oppgraderer avhengigheter og prosjektet til Java 17