@@ -1,7 +1,6 @@
 package no.spk.felles.tidsserie.batch.plugins.medlemsdatabackend.parallellisert;
 
 import static java.util.Objects.requireNonNull;
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toMap;
 import static java.util.stream.Collectors.toSet;
 
@@ -52,7 +51,7 @@ class LastbalansertePartisjonar {
                                 )
                         )
                         .map(node -> node.start(executor))
-                        .collect(toList())
+                        .toList()
                         .stream()
                 ;
     }
